@@ -1,5 +1,16 @@
 2024-02-23  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* configure.ac: Support --{enable,disable}-{poked,pokefmt} and
+	print summary at end.
+	* pokefmt/Makefile.am: Build pokefmt only if ENABLE_POKEFMT.
+	* poked/Makefile.am: Build poked only if ENABLE_POKED
+	* man/Makefile.am: Build poked manpages only if ENABLE_POKED.
+	* etc/hacking.org (Disabling building some components): New
+	section.
+	* HACKING: Regenerate.
+
+2024-02-23  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* bootstrap.conf (libpoke_modules): Add c-vasprintf and
 	c-vsnprintf gnulib modules.
 	* libpoke/pvm-wrappers.c: Use c_vaspritnf and c_vsnprintf.
